<resources>
    <string name="app_name">Margherita App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Margherita Pizzeria BN</string>
    <string name="nav_header_subtitle">Pizza Brings People Together!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text_1">Welcome to Margherita Pizzeria Online Ordering App!</string>
    <string name="welcome_text_2">Enjoy local home-made pizza with your family and friends. Start ordering now!</string>
    <string name="home">Home</string>
    <string name="order_now">Order Now</string>
    <string name="view_cart">View Cart</string>
    <string name="manager_page">Manager Page</string>
    <string name="cashier_page">Cashier Page</string>
    <string name="waiter_page">Waiter Page</string>
    <string name="chef_page">Chef Page</string>

    <string name="qty_label">Quantity:</string>
    <string name="order_price_label">Price:  $</string>
    <string name="addtocart_button">ADD TO CART</string>
    <string name="desc_label">Description:</string>
    <string name="item_label">Item:</string>
    <string name="price_label">Price:</string>
    <string name="table_no_label">Table No.:</string>
    <string name="payment_label">Payment:</string>
    <string name="cash_label">Cash</string>
    <string name="card_label">Card</string>
    <string name="total_label">Total:</string>
    <string name="cancel_button">CANCEL</string>
    <string name="order_button">ORDER</string>
    <string name="serving_instructions">Click on table order to update status.</string>
    <string name="pending_instructions">Click on order to update status.</string>
    <string name="order_id_label">Order ID:</string>
    <string name="status_label">Status:</string>

</resources>
